<resources>
    <string name="app_name">Chinese Flash Cards</string>
    <string name="question_type">Question Type</string>
    <string name="english">English</string>
    <string name="pinyin">Pinyin</string>
    <string name="chinese">Chinese</string>
    <string name="question_count">Question Count</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView2</string>
    <string name="next">Next</string>

</resources>
